--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "gatsby": "^1.9.202",
     "gatsby-image": "^1.0.38",
     "gatsby-link": "^1.6.37",
+    "gatsby-plugin-netlify-cms": "^2.0.1",
     "gatsby-plugin-react-helmet": "^2.0.5",
     "gatsby-plugin-sharp": "^1.6.31",
     "gatsby-plugin-styled-components": "^2.0.7",
     "gatsby-source-filesystem": "^1.5.32",
     "gatsby-transformer-remark": "^1.7.41",
     "gatsby-transformer-sharp": "^1.6.20",
+    "netlify-cms": "^1.8.0",
     "react-helmet": "^5.2.0",
     "styled-components": "^3.1.6"
   },
