--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,5 +1,7 @@
 backend:
-  name: test-repo
+  # name: test-repo
+  name: github
+  repo: jonathanbell/gatsby-pro-level-up-tutorials-demo
 
 media_folder: static/assets
 
