Correct  source filepath for Netlify

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -8,7 +8,7 @@ media_folder: static/assets
 collections:
   - name: post
     label: Posts
-    folder: src/Posts
+    folder: src/posts
     create: true
     fields:
       - { name: title, label: Title }
